# cbt-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  RAILWAY_TIPS.md  README.md  README_DEPLOY.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: a177722917df_add_academic_and_location_tables.py  b33d05fd52da_initial_schema.py  e2b1b1b9a7c1_add_estado_to_pre_tables.py
api/: deps.py
api/v1/routes/: alumnos.py  auth.py  bandeja.py  ciclos.py  clases.py  colegios.py  (+13 more)
core/: config.py  pagination.py  security.py
db/: base.py
db/models/: academic.py  enrollment.py  location.py  preinscripcion.py  programa.py  user.py
db/repositories/: alumno_repository.py  ciclo_repository.py  clase_repository.py  colegio_repository.py  departamento_repository.py  distrito_repository.py  grupo_repository.py  inscripcion_repository.py  pago_repository.py  preinscripcion_repository.py  prepago_repository.py  programa_repository.py  provincia_repository.py  role_repository.py  user_repository.py
docs/: api.md
schemas/: alumno.py  ciclo.py  clase.py  colegio.py  dashboard.py  departamento.py  distrito.py  grupo.py  inscripcion.py  pagination.py  pago.py  preinscripcion.py  programa.py  provincia.py  user.py
scripts/: import_iiee_from_xls.py  migrate_add_estado_prepago.py  seed_initial_data.py  seed_inscripciones_pagos.py  test_academic_api.py  test_enrollment_api.py  test_import_iiee_xls.py  test_location_api.py  test_preinscripcion_api.py  test_programas_api.py
services/: auth_service.py  pdf_service.py  report_service.py
